<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <org.whut.utils.BottomTextView
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/draw4"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/rank"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/whitesmoke" >

        <org.whut.utils.BoderTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/serach_rank_num" />

        <org.whut.utils.BoderTextView
            android:id="@+id/txv_rank"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="3"
            
            android:gravity="center"
            android:maxHeight="@dimen/activity_vertical_margin"
            android:text="@string/rankprovince" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/serach_device_num" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_serach_rank"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />



</LinearLayout>
