<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gainsboro"
    tools:context=".ShowListActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/riskValue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/company_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_types"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.8"
            android:text="@string/device_types" />
    </LinearLayout>

    <ListView
        android:id="@+id/show_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <include
        android:id="@+id/likeActonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_likeactionbar" />

</LinearLayout>